Changes for 1.5.4

 - [DEV-202] fixed compilation problem under Solaris (Sasha)
 - [DEV-201] improved performance on disabling/enabling, deleting hosts (Artem)
 - [DEV-200] Queue for proxies (Sasha)
 - [DEV-144] Queue now displays numbers differently (Alexei)
 - [DEV-198] added disabled images in the elements of maps (sasha)
 - [DEV-194] dependent triggers are not count in SoT (Artem)
 - [DEV-187] increased Url field in web scenario (Sasha)
 - [DEV-195] added support of source ip address (Sasha)
 - [DEV-191] added inline update of "Latest Data" screen (Artem)
 - [DEV-193] improved viewing integer items on graphs (Artem)
 - [DEV-196] improved performance of server module (Sasha)
 - [DEV-197] added support of trends_uint (Sasha)
 - [ZBX-391] added charset info to the email header. Thanks to Vadim Pilipenko. (Sasha)
 - [DEV-189] added full clone to hosts (Artem)
 - [DEV-182] added massupdate for triggers (Artem)
 - [DEV-188] implemented sound on/off button in status of triggers screens (Artem) 
 - [DEV-184] added trigger dependencies in export/import (Artem)
 - [DEV-150] added error reporting for zabbix_get (Sasha)
 - [DEV-177] added checkbox range selection (Artem)
 - [DEV-183] added support of applications in action conditions (Sasha)
 - [DEV-174] added ability to edit user medias (Artem)
 - [DEV-185] added support of zabbix[uptime] and zabbix[boottime] (Alexei)
 - [DEV-176] implemented "color only non-zero values" in "Status of triggers" (Artem)
 - [DEV-175] added last login time to users tab (Artem)
 - [DEV-178] improved the permissions scheme in frontend (Artem)

Changes for 1.5.3

 - [ZBX-380] added support of directories for Include in configuration file (Sasha)
 - [DEV-171] added support of notification escalations on frontend side (Artem)
 - [DEV-173] added support of macros {EVENT.DATE},{EVENT.TIME},{EVENT.AGE} and {ESC.HISTORY} (Sasha)
 - [DEV-173] added support of notification escalations on server side (Sasha)